# mlip-adsorption-energy-benchmark

./: .gitignore  CHANGELOG.md  README.md  README_en.md  README_jp.md  pyproject.toml
code/: analyze.py  run_benchmark.py  visualize.py
result/: README.md  README_jp.md
result/ComerGeneralized2024/: README.md  README_jp.md
result/ComerGeneralized2024/analysis/: ComerGeneralized2024_Benchmarking_Analysis.xlsx  ComerGeneralized2024_dashboard.html  ComerGeneralized2024_summary.csv
result/ComerGeneralized2024/analysis/per_calculator/: chgnet-0.3.0_adsorbate_breakdown.csv  chgnet-0.3.0_parity.csv  chgnet-0.3.0_parity.html  chgnet-r2scan_adsorbate_breakdown.csv  chgnet-r2scan_parity.csv  chgnet-r2scan_parity.html  mattersim-1M_adsorbate_breakdown.csv  mattersim-1M_parity.csv  mattersim-1M_parity.html  mattersim-5M_adsorbate_breakdown.csv  mattersim-5M_parity.csv  mattersim-5M_parity.html  nequip-XL_adsorbate_breakdown.csv  nequip-XL_parity.csv  nequip-XL_parity.html  nequip-l_adsorbate_breakdown.csv  nequip-l_parity.csv  nequip-l_parity.html  nequip-m_adsorbate_breakdown.csv  nequip-m_parity.csv  nequip-m_parity.html  nequip-s_adsorbate_breakdown.csv  nequip-s_parity.csv  nequip-s_parity.html  sevennet-matpes_pbe-cueq_adsorbate_breakdown.csv  sevennet-matpes_pbe-cueq_parity.csv  sevennet-matpes_pbe-cueq_parity.html  sevennet-matpes_pbe_adsorbate_breakdown.csv  sevennet-matpes_pbe_parity.csv  sevennet-matpes_pbe_parity.html  sevennet-matpes_r2scan-cueq_adsorbate_breakdown.csv  sevennet-matpes_r2scan-cueq_parity.csv  sevennet-matpes_r2scan-cueq_parity.html  sevennet-matpes_r2scan_adsorbate_breakdown.csv  sevennet-matpes_r2scan_parity.csv  sevennet-matpes_r2scan_parity.html  sevennet-mpa-cueq_adsorbate_breakdown.csv  sevennet-mpa-cueq_parity.csv  sevennet-mpa-cueq_parity.html  sevennet-mpa_adsorbate_breakdown.csv  (+29 more)
result/FG_dataset/: README.md  README_jp.md
result/FG_dataset/analysis/: FG_dataset_Benchmarking_Analysis.xlsx  FG_dataset_dashboard.html  FG_dataset_summary.csv
result/FG_dataset/analysis/per_calculator/: chgnet-0.3.0-d3_adsorbate_breakdown.csv  chgnet-0.3.0-d3_parity.csv  chgnet-0.3.0-d3_parity.html  chgnet-r2scan-d3_adsorbate_breakdown.csv  chgnet-r2scan-d3_parity.csv  chgnet-r2scan-d3_parity.html  mattersim-1M-d3_adsorbate_breakdown.csv  mattersim-1M-d3_parity.csv  mattersim-1M-d3_parity.html  mattersim-5M-d3_adsorbate_breakdown.csv  mattersim-5M-d3_parity.csv  mattersim-5M-d3_parity.html  nequip-XL-d3_adsorbate_breakdown.csv  nequip-XL-d3_parity.csv  nequip-XL-d3_parity.html  nequip-l-d3_adsorbate_breakdown.csv  nequip-l-d3_parity.csv  nequip-l-d3_parity.html  nequip-m-d3_adsorbate_breakdown.csv  nequip-m-d3_parity.csv  nequip-m-d3_parity.html  nequip-s-d3_adsorbate_breakdown.csv  nequip-s-d3_parity.csv  nequip-s-d3_parity.html  sevennet-matpes_pbe-cueq-d3_adsorbate_breakdown.csv  sevennet-matpes_pbe-cueq-d3_parity.csv  (+28 more)
result/MamunHighT2019/: README.md  README_jp.md
result/MamunHighT2019/analysis/: MamunHighT2019_Benchmarking_Analysis.xlsx  MamunHighT2019_dashboard.html  MamunHighT2019_summary.csv
script/tsubame4/: run_tsubame_benchmark.sh  submit_tsubame_jobs.py
scripts/tsubame4/: run_tsubame_benchmark.sh  submit_tsubame_jobs.py
src/mlip_adsorption_energy_benchmark/: __init__.py  analysis.py  benchmarks.py  calculators.py  factories.py  runner.py
src/mlip_adsorption_energy_benchmark/cli/: __init__.py  analyze.py  run.py  visualize.py
tests/: test_cli_factory.py  test_factories.py  test_packaging.py  test_runner_factory.py
(+42 files in other folders)
