[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlip-adsorption-energy-benchmark"
version = "0.1.0"
description = "Benchmark machine-learning interatomic potentials on adsorption energies via CatBench and ase-calculator-kit."
readme = "README.md"
# Upper bound inherited from ase-calculator-kit (MatterSim / fairchem-core).
requires-python = ">=3.12,<3.14"
authors = [
  { name = "Ishikawa Group" }
]
dependencies = [
  "numpy",
  "ase",
  "pandas",
  "matplotlib",
  "tqdm",
  "catbench @ git+https://github.com/JinukMoon/catbench.git",
  "ase-calculator-kit @ git+https://github.com/ishikawa-group/ase-calculator-kit.git",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
