[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlip-adsorption-energy-benchmark"
version = "0.1.0"
description = "Benchmark arbitrary ASE calculators and MLIP presets on adsorption energies via CatBench."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
  { name = "Ishikawa Group" }
]
dependencies = [
  "numpy",
  "ase",
  "pandas",
  "matplotlib",
  "tqdm",
  "openpyxl",          # read CatBench's xlsx report to export a summary CSV
  "plotly",            # interactive HTML visualizations
  "catbench @ git+https://github.com/JinukMoon/catbench.git",
]

[project.optional-dependencies]
presets = [
  "ase-calculator-kit[all] @ git+https://github.com/ishikawa-group/ase-calculator-kit.git@v0.3.0",
]
chgnet = [
  "ase-calculator-kit[chgnet] @ git+https://github.com/ishikawa-group/ase-calculator-kit.git@v0.3.0",
]
sevennet = [
  "ase-calculator-kit[sevennet] @ git+https://github.com/ishikawa-group/ase-calculator-kit.git@v0.3.0",
]
mattersim = [
  "ase-calculator-kit[mattersim] @ git+https://github.com/ishikawa-group/ase-calculator-kit.git@v0.3.0",
]
nequip = [
  "ase-calculator-kit[nequip] @ git+https://github.com/ishikawa-group/ase-calculator-kit.git@v0.3.0",
]
uma = [
  "ase-calculator-kit[uma] @ git+https://github.com/ishikawa-group/ase-calculator-kit.git@v0.3.0",
]
dispersion = [
  "ase-calculator-kit[dispersion] @ git+https://github.com/ishikawa-group/ase-calculator-kit.git@v0.3.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
